# meshcut

./: CMakeLists.txt  MAPLIBRE_INTEGRATION_ANALYSIS.md  README.md  SPATIAL_OPTIMIZATION_SUMMARY.md  analyze_performance.py  bottleneck_investigation  bottleneck_investigation.cpp  clear_analysis  clear_analysis.cpp  clear_analysis_optimized  debug_false_positive  debug_false_positive.cpp  debug_intersection  debug_intersection.cpp  debug_polygon_202.cpp  deep_performance_analysis.cpp  demo_meshcut_complex.py  earcut_simple_test  earcut_simple_test.cpp  latlon_to_zyx.py  meshcut-first-idea.md  meshcut-implementation-blueprint.md  optimization_test.cpp  overhead_analysis.cpp  real_world_benchmark  real_world_benchmark.cpp  test_basic  test_boundary_fix.cpp  test_earcut_compatibility.cpp  test_full_pipeline  test_full_pipeline.cpp  test_intersection_debug  test_intersection_debug.cpp  test_maplibre_issue  test_maplibre_issue.cpp  test_meshcut  test_meshcut.cpp  test_optimized_visualization.py  test_performance  test_ray_edge_case  (+5 more)
cmake/: meshcutConfig.cmake.in
include/: meshcut.hpp  meshcut_impl.hpp  meshcut_maplibre.hpp
include/meshcut/: earcut_compatible.hpp  meshcut.hpp
src/: meshcut.cpp
test/: test_advanced.cpp  test_basic.cpp  test_combined_fix_demo.cpp  test_comprehensive_tile_suite.cpp  test_edge_crossing_polygons.cpp  test_edge_crossing_simulation.cpp  test_maplibre_integration_debug.cpp  test_performance.cpp  test_real_coordinate_analysis.cpp  test_real_innsbruck_analysis.cpp  test_real_polygon_extraction.cpp  test_real_vector_tile.cpp  test_simple_vector_tile.cpp  test_spatial_comparison.cpp  test_validation.cpp  test_visualization.cpp  test_visualization_complex.cpp
visualizations/: README.md
